# hls-video-platform

./: README.md
backend/: .gitignore
local-infra/: .env.example  .gitignore  README.md
local-infra/backend/: .env.example  Dockerfile  index.js  package-lock.json  package.json  tsconfig.json
local-infra/backend/prisma/: schema.prisma
local-infra/backend/src/: app.module.ts  main.ts
local-infra/backend/src/auth/: auth.controller.ts
local-infra/backend/src/auth/dto/: login.dto.ts
local-infra/backend/src/common/meili/: meili.module.ts  meili.service.ts
local-infra/backend/src/common/rabbitmq/: rabbitmq.module.ts  rabbitmq.service.ts
local-infra/backend/src/common/redis/: redis.module.ts  redis.service.ts
local-infra/backend/src/common/s3/: s3.module.ts  s3.service.ts
local-infra/backend/src/consumers/: transcode.consumer.ts
local-infra/backend/src/health/: health.controller.ts
local-infra/backend/src/prisma/: prisma.service.ts
local-infra/backend/src/search/: search.controller.ts  search.module.ts
local-infra/backend/src/uploads/: uploads.consumer.ts  uploads.controller.ts  uploads.module.ts
local-infra/backend/src/uploads/dto/: signed-url.dto.ts
local-infra/backend/src/videos/: videos.controller.ts  videos.module.ts
local-infra/backend/src/videos/dto/: create-video.dto.ts  publish.dto.ts
local-infra/infra/: docker-compose.yml
local-infra/nginx/: nginx.conf
local-infra/scripts/: minio-init.sh
transcoder/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
transcoder/src/: main.rs
