[package]
name = "transcoder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# RabbitMQ
lapin = { version = "2", features = ["rustls"] }
# S3 / MinIO
aws-config = "1"
aws-sdk-s3 = "1"
aws-smithy-types = "1"
# Web server para métricas/health
axum = "0.7"
hyper = { version = "1", features = ["server"] }
tokio-util = "0.7"
# Métricas Prometheus
prometheus = "0.13"
# Utilidades
bytes = "1"
walkdir = "2"
thiserror = "1"
lazy_static = "1"
futures-lite = "2"
# Fuerza versión compatible en todo el grafo
base64ct = "=1.7.2"
url = "2"
